--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
-    <string name="app_name">Education Firebase</string>
+    <string name="app_name">Firebase</string>
+
+    <string name="done_deleted">Note deleted</string>
+    <string name="senarai_cerita">SENARAI CERITA</string>
+    <string name="hint_name">Nama</string>
+    <string name="hint_email">E-mel</string>
+    <string name="hint_password">Kata Laluan</string>
+    <string name="hint_confirm_password">Sahkan Kata Laluan</string>
+    <string name="text_login">Login</string>
+    <string name="text_register">Register</string>
+    <string name="error_message_name">Enter Full Name</string>
+    <string name="error_message_email">Enter Valid Email</string>
+    <string name="error_message_age">Enter Age</string>
+    <string name="error_message_password">Enter Password</string>
+    <string name="success_message">Registration Successful</string>
+    <string name="text_not_member">No account yet? Create one</string>
+    <string name="text_already_member">Sudah menjadi ahli? Log masuk</string>
+    <string name="error_email_exists">Email Already Exists</string>
+    <string name="error_password_match">Password Does Not Matches</string>
+    <string name="error_valid_email_password">Wrong Email or Password</string>
+    <string name="text_member">Sudah menjadi ahli? Log masuk</string>
 </resources>
